objects/Opportunity_Notif_Mobility_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for the new Opportunity Notification Conversion Process</description>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Product_BU__c</fullName>
        <label>Opportunity Line Product BU</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_BU__c</fullName>
        <label>Product BU</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Opportunity Notif Mobility Mapping</label>
</CustomObject>